# remy

./: .gitignore  Cargo.toml  README.md  djlint.toml  flake.nix  package-lock.json  package.json  tsconfig.json
public/: index.css  index.js
src/: App.tsx  app.rs  main.rs  templates.rs
src/components/: Counter.tsx  Recipe.tsx
src/lib/: recipes.ts
src/routes/: index.tsx
src/routes/recipes/: [recipeName].tsx
src/server/: recipes.ts
templates/: 404.html  base.html  index.html  recipe.html
