[package]
name = "remy"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.0-pre.0"
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
cooklang = "0.15.0"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
walkdir = "2.5.0"
